--- a/pom.xml
+++ b/pom.xml
@@ -33,34 +33,36 @@
 		<groupId>commons-lang</groupId>
 		<artifactId>commons-lang</artifactId>
 		<version>2.6</version>
-		<scope>provided</scope>
 	</dependency>
 	
 	<dependency>
 		<groupId>commons-collections</groupId>
 		<artifactId>commons-collections</artifactId>
 		<version>3.2.1</version>
-		<scope>provided</scope>
 	</dependency>
 		
 	<dependency>
 		<groupId>commons-fileupload</groupId>
 		<artifactId>commons-fileupload</artifactId>
 		<version>1.2.2</version>
-		<scope>provided</scope>
 	</dependency>
 	
 	<dependency>
 		<groupId>commons-io</groupId>
 		<artifactId>commons-io</artifactId>
 		<version>1.4</version>
-		<scope>provided</scope>
 	</dependency>
 	
 	<dependency>
 		<groupId>commons-logging</groupId>
 		<artifactId>commons-logging</artifactId>
 		<version>1.2</version>
+	</dependency>
+	
+	<dependency>
+		<groupId>org.springframework</groupId>
+		<artifactId>spring-core</artifactId>
+		<version>4.1.0.RELEASE</version>
 	</dependency>
 	
 	<!-- JEE -->
@@ -78,35 +80,30 @@
 	    <groupId>com.sun.jersey</groupId>
 	    <artifactId>jersey-server</artifactId>
 	    <version>1.17</version>
-	    <scope>provided</scope>
 	</dependency>	
 	
 	<dependency>
 	    <groupId>com.sun.jersey</groupId>
 	    <artifactId>jersey-servlet</artifactId>
 	    <version>1.17</version>
-	    <scope>provided</scope>
 	</dependency>
 	
 	<dependency>
 	    <groupId>com.sun.jersey</groupId>
 	    <artifactId>jersey-json</artifactId>
 	    <version>1.17</version>
-	    <scope>provided</scope>
 	</dependency>
 	
 	<dependency>
 	    <groupId>com.sun.jersey</groupId>
 	    <artifactId>jersey-client</artifactId>
 	    <version>1.17</version>
-	    <scope>provided</scope>
 	</dependency>
 	
 	<dependency>
 		<groupId>org.codehaus.jackson</groupId>
 		<artifactId>jackson-core-asl</artifactId>
 		<version>1.9.13</version>
-		<scope>provided</scope>
 	</dependency>
 	
 	<dependency>
@@ -121,7 +118,6 @@
 		<groupId>org.hibernate.javax.persistence</groupId>
 		<artifactId>hibernate-jpa-2.0-api</artifactId>
 		<version>1.0.1.Final</version>
-		<scope>provided</scope>
 	</dependency>
 	
 	<dependency>
