--- a/pom.xml
+++ b/pom.xml
@@ -71,8 +71,8 @@
 		<groupId>javax.servlet</groupId>
 		<artifactId>servlet-api</artifactId>
 		<version>2.5</version>
+		<scope>provided</scope>
 	</dependency>
-            
 	
 	<!-- REST -->
 	
