--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,19 @@
 			<version>1.4.7</version>
 			<scope>provided</scope>
 		</dependency>
+		
+		<!-- Quartz -->
+		<dependency>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz</artifactId>
+		    <version>2.1.5</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-log4j12</artifactId>
+		    <version>1.7.5</version>
+		</dependency>
 
 	</dependencies>
 
